# Theia-binary-compiler

./: .gitignore  README.md
binaryWriter/: ASMGenerator.cpp  ASMGenerator.h  BinaryWriter.cpp  BinaryWriter.h  BytecodeStream.cpp  BytecodeStream.h  CMakeLists.txt  Opcodes.cpp  Opcodes.h  SystemIdentifier.cpp  SystemIdentifier.h  main.cpp
binaryWriter/CFG/: Graph.cpp  Graph.h
binaryWriter/IR/: IRCommandParser.cpp  IRCommandParser.h  IRFunctionParser.cpp  IRFunctionParser.h  IRParsedProgram.cpp  IRParsedProgram.h  IRParser.h
binaryWriter/IR/Parse/: CFG.h  IRCommandParser.h  IRFunctionParser.h  IRParsedProgram.h
binaryWriter/IR/docs/: Doxyfile.in  DoxygenGenerator.py
binaryWriter/IR/utils/: errutils.h  strutils.h
binaryWriter/docs/: Doxyfile.in
binaryWriter/utils/: errutils.cpp  errutils.h  strutils.cpp  strutils.h
examples/: README.md  testFn.txt
